Some writeups changes

--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
                                     <h6 class="font_6" style="line-height:1.5em;">
                                       <span style="font-weight:bold;">
                                         <span style="letter-spacing:0.05em;">
-                                          In general, when you think of locations where the movies masteprieces were filmed, Los Angeles and New York come to mind first. The purpose of these visualizations is to show that SF is a cinematic city with long movie history.
-                                          The goal was divided into two parts: locations and ratings. Firstly, the location map is absolutely unque and intended to show 100 year hirstory of where and when the movies were filmed.
-                                          Secondly, ratings chart purpose is to show raitings of movies filmed in SF compared to all movies raitings.
+                                          In general, when you think of locations where the movies masterpieces were filmed, Los Angeles and New York come to mind first.
+                                          The purpose of these visualizations is to show that SF is a cinematic city with a long movie history.
+                                          The goal was divided into two parts: locations and ratings. Firstly, the location map is absolutely unque and
+                                          intended to show 100 year hirstory of where and when the movies were filmed.
+                                          Secondly, the ratings chart purpose is to show ratings of movies filmed in SF compared to all movies ratings.
                                           <!-- The data and map can also make good tourist business. -->
                                           <!-- This map is absolutely unique -->
                                           <!-- cinematography history -->
