--- a/locations.html
+++ b/locations.html
@@ -161,7 +161,7 @@
                     </div>
                     <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                       <h6 class="font_6" style="line-height:1.5em;">
-                        Which have been the most popular areas of San Francisco for major motion pictures have been filmed in a past 100 years?
+                        Which have been the most popular areas of San Francisco where major motion pictures have been filmed in the past 100 years?
                         Is there a visible cluster of where most motion picures have been filmed?
                       </h6>
                     </div>
@@ -172,7 +172,9 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          We can see that the first record from our dataset was filmed in the Golden Gate Park, however the trend shows that during next 99 years San Francisco downtown was the most populat filming place. We can also notice that in the past 50 years Mission District became quite popular for filming too.
+                          We can see that the first record from our dataset was filmed in the Golden Gate Park, however the trend shows that
+                          during next 99 years downtown San Francisco  was the most popular filming place. We can also notice that in the
+                           past 50 years the Mission District became quite popular for filming too.
                         </h6>
                       </div>
                     </div>
@@ -185,7 +187,7 @@
                         <h6 class="font_6" style="line-height:1.5em;">
                           The non-proportional symbol map shows San Francisco map, a basemap consists of SF neighborhoods, on top of basemap SF blocks are visualized.
                           The circles on the map show the places where a particular movie scene took a place.
-                          The color scheme shows distinguish between years. The older years are encoded in purple and blue colors while the most recent are endoded in green and yellow.
+                          The color scheme distinguishes between years. The older years are encoded in purple and blue colors while the most recent are encoded in green and yellow.
                         </h6>
                       </div>
                     </div>
@@ -196,9 +198,13 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          Hover over the circle to see detailed information. Tooltip includes title of the movie, release year, address where the scene was filmed and director's name. </br>
-                          Use the mouse up and mouse down functionality to zoom in and zoom out. Mouse down -> zoom in. Mouse up -> zoom out. Click twice on the neighborhood to zoom into it. Panning can be accomplished clicking and dragging the box on the overview. That's the way to see the different neighborhoods details on zommed in map without zooming out. </br>
-                          Use the slider bar under the map to choose which range of years should be shown on the map. If you want to see a particular year, drag both left and right sliders to the same spot.
+                          Hover over the circle to see detailed information. Tooltip includes title of the movie, release year, address where the
+                           scene was filmed and director's name. </br>
+                          Use the mouse up and mouse down functionality to zoom in and zoom out. Mouse down -> zoom in. Mouse up -> zoom out.
+                           Click twice on the neighborhood to zoom into it. Panning can be accomplished clicking and dragging the box on the overview.
+                           That's the way to see the different neighborhoods details on zoomed in map without zooming out. </br>
+                          Use the slider bar under the map to choose which range of years should be shown on the map. If you want to see a particular year,
+                           drag both left and right sliders to the same spot.
                         </br>
                         </h6>
                         <div data-packed="true" style="width: 606px; height: 450px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
