--- a/ratings.html
+++ b/ratings.html
@@ -164,8 +164,10 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          Sunburst elements include hierarchy of year by genre. The size of the cell is encoded by sum of imdb of movies in this hierarchy cell. The color sheme shows the gross, the darker color shows the higher gross. </br>
-                          Scattergram shows imdb scores on y axis and and gross on y axis. Each movie is encoded by circle and places on (x,y) where x is it's imdb score and y is it's gross. </br>
+                          Sunburst elements include hierarchy of year by genre. The size of the cell is encoded by the total sum of imdb score of movies in this hierarchy cell, so the higher the cumulative imdb score in a year, the larger the cell.
+                          The color scheme shows the gross, the darker color shows the higher gross. </br>
+                          Scattergram shows imdb scores on y axis and and gross on y axis. Each movie is encoded by circle and places on (x,y)
+                           where x is it's imdb score and y is it's gross. </br>
                         </h6>
                       </div>
                     </div>
@@ -176,8 +178,8 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          There are less movies than on the <u><a href="locations.html">map</a></u>,because the movies from <u><a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF movies</a></u> were merged with <u><a href="https://data.world/data-society/imdb-5000-movie-dataset">IMDB 5000 Movie Dataset</a></u> to get raitings data.
-                          The second dataset doesn't include movies relesed after 2016 and doesn't include any series, which resulted in reducing SF movie elements in ratings diagrams. After first merging all rows were merged again by same title-director-year, to remove duplicate data in ratings. It was used in location map: if movie was filmed in different locations in SF, it had more than one row.
+                          There are less movies than on the <u><a href="locations.html">map</a></u>,because the movies from <u><a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF movies</a></u> were merged with <u><a href="https://data.world/data-society/imdb-5000-movie-dataset">IMDB 5000 Movie Dataset</a></u> to get ratings data.
+                          The second dataset doesn't include movies released after 2016 and doesn't include any televison series, which resulted in reducing SF movie elements in the ratings diagrams. After first merging all rows were merged again by same title-director-year, to remove duplicate data in ratings. It was used in location map: if a movie was filmed in different locations in SF, it had more than one row.
                         </h6>
                       </div>
                     </div>
@@ -188,9 +190,7 @@
                       </div>
                       <div data-packed="true" style="width: 1000px; height: 650px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
                         <h6 class="font_6" style="line-height:1.5em;">
-                          Describe your planned interactivity.
-                          Use precise visualization terminology to describe the type of interactivity, and what mouse or keyboard events will trigger that interactivity.
-                          Sunburst chart will have a zoom on click implementation. After clicking in a particular year region, we will see all movies filmed this year by titles.
+                          The sunburst chart will have a zoom on click implementation. After clicking in a particular year region, we will see all movies filmed this year by titles.
                           After hovering over the region, we will see all movies from this region highlighted on the scattergram (see img. below).
                           After hovering over the movie title after zooming, we will see this particular movie highlighted on the scattergram (see img. below).
                           <div data-packed="true" style="width: 606px; height: 450px; pointer-events: none;" class="txtNew" id="comp-ividcu8q">
