Added 'BETA' to titles to make it clear

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     </div>
                                     <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
                                       <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
-                                              data-anchor="dataItem-ividcu621">Page that includes location map visualization.</a></span></span></p>
+                                              data-anchor="dataItem-ividcu621">Page that includes location map Beta Visualization.</a></span></span></p>
                                     </div>
                                   </div>
                                 </div>
@@ -304,7 +304,7 @@
                                     </div>
                                     <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
                                       <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="ratings.html" target="_self" data-anchor="dataItem-ividcu621">Page that
-                                              includes ratings visualization.</a></span></span></p>
+                                              includes Beta Ratings Visualization.</a></span></span></p>
                                     </div>
                                   </div>
                                 </div>
