--- a/locations.html
+++ b/locations.html
@@ -88,7 +88,7 @@
                             <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
 
                               <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Movies in San Francisco</span></h2>
+                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Beta: Movies in San Francisco</span></h2>
                                 </br>
                                 <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
                                     <a href="alphalocations.html">Alpha Prototype → </a>
