Fixed bug in links

--- a/locations.html
+++ b/locations.html
@@ -91,7 +91,7 @@
                                 <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Beta: Movies in San Francisco</span></h2>
                                 </br>
                                 <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
-                                    <a href="alphalocations.html">Alpha Prototype → </a>
+                                    <a href="alphalocations.html">Click here for Alpha Prototype </a>
                                 </h2>
                               </div>
 
