--- a/ratings.html
+++ b/ratings.html
@@ -89,7 +89,7 @@
                                 <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Beta: Movies Ratings</span></h2>
                                 </br>
                                 <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
-                                    <a href="alpharatings.html">Alpha Prototypes → </a>
+                                    <a href="alpharatings.html">Click here for Alpha Prototypes </a>
                                 </h2>
 
                               </div>
