--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                                 target="_self" data-anchor="dataItem-ividcu621">Data</a></span></span></span></p>
                                     </div>
                                     <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
-                                      <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
+                                      <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="data.html" target="_self"
                                               data-anchor="dataItem-ividcu621">Page that describes the original dataset.</a></span></span></p>
                                     </div>
                                   </div>
@@ -263,7 +263,7 @@
                                                 href="locations.html" target="_self" data-anchor="dataItem-ividcu621">Location Map</a></span></span></span></p>
                                     </div>
                                     <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
-                                      <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="https://betlakes.wixsite.com/mysite-1" target="_self"
+                                      <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="locations.html" target="_self"
                                               data-anchor="dataItem-ividcu621">Page that includes location map Beta Visualization.</a></span></span></p>
                                     </div>
                                   </div>
