--- a/locations.html
+++ b/locations.html
@@ -88,10 +88,13 @@
                             <div id="comp-ividcu8kinlineContent-gridContainer" data-mesh-internal="true">
 
                               <div data-packed="true" style="width: 712px; pointer-events: none;" class="txtNew" id="comp-ividcu8o">
-                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Beta: Movies in San Francisco</span></h2>
+                                <h2 class="font_6" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">Final: Movies in San Francisco</span></h2>
                                 </br>
                                 <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
                                     <a href="alphalocations.html">Click here for Alpha Prototype </a>
+                                </h2>
+                                <h2 class="font_12" style="line-height:1.5em;"><span style="letter-spacing:0.05em;">
+                                    <a href="betalocations.html">Click here for Beta Prototype </a>
                                 </h2>
                               </div>
 
@@ -108,6 +111,8 @@
                                     </g>
                                     <g id="legend" pointer-events="none"></g>
                                   </svg>
+                                  <svg width="960" height="500" id="barchart">
+                                    </svg>
                                   <figcaption>
                                     Source: <a href="https://www.kaggle.com/san-francisco/sf-film-locations-in-san-francisco">SF Film Locations in San Francisco</a> (<a
                                     href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Analysis-Neighborhoods/p5b7-5n3h">Neighborhoods</a>, <a href="https://data.sfgov.org/Geographic-Locations-and-Boundaries/Streets-Active-and-Retired/3psu-pn9h">Streets</a>) </br>
