--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                   <h6 class="font_12" style="line-height:1.5em;">
                                     Website style: <u><a href="https://www.wix.com/account/sites">Wix</a></u> </br>
                                     Prototype Applications: <u><a href="https://www.tableau.com/">Tableau</a></u>, <u><a href="https://app.rawgraphs.io/">Raw Graphs</a></u> </br>
-                                    D3-simple-slider: <u><a href="https://bl.ocks.org/johnwalley/e1d256b81e51da68f7feb632a53c3518">bl.ocks</a></u> </br>
+                                    D3 Brush Zoom Bar Chart: <u><a href="http://codexe.net/d3/d3-brush-zoom-bar-chart.html">codexe</a></u> </br>
                                     Continuous Legend: <u><a href="http://bl.ocks.org/syntagmatic/e8ccca52559796be775553b467593a9f">bl.ocks</a></u> </br>
                                     Zoomable Map Tiles: <u><a href="https://observablehq.com/@d3/zoomable-map-tiles">observable</a></u> </br>
                                     Zoomable sunburst: <u><a href="https://observablehq.com/@d3/zoomable-sunburst">observable</a></u> </br>
@@ -264,7 +264,7 @@
                                     </div>
                                     <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
                                       <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="locations.html" target="_self"
-                                              data-anchor="dataItem-ividcu621">Page that includes location map Beta Visualization.</a></span></span></p>
+                                              data-anchor="dataItem-ividcu621">Page that includes location map final Visualization.</a></span></span></p>
                                     </div>
                                   </div>
                                 </div>
@@ -304,7 +304,7 @@
                                     </div>
                                     <div data-packed="true" style="width: 200px; pointer-events: none;" class="txtNew" id="comp-ividcu4u">
                                       <p class="font_8" style="line-height:1.5em; text-align:center;"><span class="color_13"><span style="letter-spacing:0.05em;"><a href="ratings.html" target="_self" data-anchor="dataItem-ividcu621">Page that
-                                              includes Beta Ratings Visualization.</a></span></span></p>
+                                              includes final Ratings Visualization.</a></span></span></p>
                                     </div>
                                   </div>
                                 </div>
